--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -22,3 +22,8 @@
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
 }
+
+header {
+  background-color:#88B04B;
+  padding: 20px;
+}
